Fix Title column width and alignment issue on very large screens

--- a/src/components/UserManagement/usermanagement.css
+++ b/src/components/UserManagement/usermanagement.css
@@ -107,7 +107,7 @@ thead {
 
 }
 
-.fixed-width-container {
+.title_cell {
   width: 180px;
   min-width: 180px;
   max-width: 180px;
